# alpapap

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  README  WISHLIST
data/: Bleepie - Summer Forever.oga  spammer.desktop
docs/: _spammer  compiling  spammer.man
src/: Browser.hpp  CMakeLists.txt  forms.hpp  gui.cpp  links.hpp  regex.hpp  spam.cpp  spam.h
